@@ -1,3 +1,9 @@
+2009-03-26  Alexander Larsson  <alexl@redhat.com>
+
+	* gnome-bg.c (gnome_bg_get_pixmap_from_root):
+	push/pop error handler around getting the existing root pixmap in case
+	the root properties point to something wrong.
+
 ==================== 2.26.0 ====================
 
 2009-03-06  Federico Mena Quintero  <federico@novell.com>
